# judgeval

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FINAL_VERIFICATION.md  FINANCIAL_AGENT_INTEGRATION_GUIDE.md  INTEGRATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  INTERNAL_DOCS.md  LANGGRAPH_INTEGRATION.md  Pipfile  README.md  READY_FOR_TESTING.md  RELIABILITY_ANALYSIS.md  RELIABILITY_TESTING_PLAN.md  Readme_Agent  TASK_COMPLETED.md  example_langgraph_usage.py  pyproject.toml  pytest.ini  readme_agent.md  test_langgraph_integration_simple.py  test_ollama_integration.py  test_realistic_financial_agent.py  update_version.py
.claude/: settings.local.json
.github/: pull_request_template.md
docs/: development.mdx  getting_started.mdx  mint.json
e2etests/: judgment_client_test.py  test_all_scorers.py  test_judgee.py  test_judgee_tracking.py  test_tracer.py
go/: README.md  base_scorer.go  (+11 more)
judgeval-claude-plugin/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
judgeval-claude-plugin/.claude-plugin/: marketplace.json  plugin.json
judgeval-claude-plugin/.github/workflows/: ci.yml  release.yml
judgeval-claude-plugin/hooks/: hooks.json
judgeval-claude-plugin/skills/trace-claude-code/: SKILL.md  setup.sh
judgeval-claude-plugin/skills/trace-claude-code/hooks/: common.sh  post_tool_use.sh  session_end.sh  session_start.sh  stop_hook.sh  subagent_stop.sh  user_prompt_submit.sh
judgeval-claude-plugin/skills/trace-claude-code/tests/: run_tests.sh  test_common.sh  test_helpers.sh  test_integration.sh  test_session_end.sh  test_subagent_stop.sh
(+758 files in other folders)
